--- a/styles/base.css
+++ b/styles/base.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #170126;
-    --secondary-color: #685873;
+    --secondary-color: #D3CDE8;
     --accent1-color: #2D1140;
     --accent2-color: #0D0D0D;
     --accent3-color: #F2F2F2;
@@ -54,6 +54,7 @@ nav {
 
 nav a, nav a:visited, nav a:hover, nav a:focus, nav a:active {
     font-family: var(--heading-font);
+    font-size: larger;
     color: var(--primary-color);
 }
 
