--- a/lesson02/styles/base.css
+++ b/lesson02/styles/base.css
@@ -29,19 +29,19 @@ header {
     text-align: center;
 }
 
-main h2, main h3 {
+ h2, h3 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
 
-section {
+div {
     border: 1px solid var(--primary-color);
     border-radius: 1rem;
     margin: 2rem;
     background-color: var(--accent3-color);
 }
 
-section h2 {
+div h2 {
     background-color: var(--secondary-color);
     border: 0.5rem solid var(--secondary-color);
     border-top-left-radius: 1rem;
@@ -50,7 +50,7 @@ section h2 {
     padding: 0;
 }
 
-section article {
+div article {
     padding: 1.5rem;
     font-family: var(--paragraph-font);
     color: var(--accent2-color);
