--- a/styles/base.css
+++ b/styles/base.css
@@ -74,6 +74,7 @@ main h2, main h3 {
     border: 2px solid var(--accent2-color);
     border-radius: 0.25rem;
     margin: 2rem;
+    padding: 1rem;
 }
 
 .card ul {
@@ -84,6 +85,11 @@ main h2, main h3 {
 .card li, .card a {
     font-family: var(--paragraph-font);
     color: var(--accent2-color);
+}
+
+.card iframe {
+    width: 100%;
+    height: 100%;
 }
 
 footer {
