--- a/styles/base.css
+++ b/styles/base.css
@@ -45,7 +45,7 @@ header h1 {
     color: var(--accent3-color);
 }
 
-nav {
+/*nav {
     background-color: var(--secondary-color);
 }
 
@@ -64,7 +64,7 @@ nav a, nav a:visited, nav a:hover, nav a:focus, nav a:active {
     font-family: var(--heading-font);
     font-size: larger;
     color: var(--primary-color);
-}
+}*/
 
 main h2, main h3 {
     font-family: var(--heading-font);
@@ -95,4 +95,61 @@ footer {
     background-color: var(--accent3-color);
     font-family: var(--paragraph-font);
     color: var(--accent2-color);
+}
+
+/* Hamburger Menu */
+#menu {
+	font-size: 1.5rem;
+	border: 0;
+	background: none;
+	color: #000;
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+}
+
+#menu::before {
+	content: "☰";
+    color: var(--accent3-color);
+}
+
+#menu.open::before {
+	content: "X";
+    color: var(--accent3-color);
+}
+
+.navigation {
+	display: flex;
+	flex-direction: column;
+	background-color: var(--secondary-color);
+}
+
+.navigation ul {
+    list-style: none;
+}
+
+.navigation a {
+	display: none;
+	padding: 1rem;
+	text-align: center;
+	text-decoration: none;
+    font-family: var(--heading-font);
+    font-size: larger;
+    color: var(--primary-color);
+}
+
+.navigation a:hover {
+	font-weight: 700;
+}
+
+/* when the button is clicked - the open class is toggled (added/removed) */
+.open a {
+	display: block;
+}
+
+/* wayfinding symbol for the user */
+.navigation .active { 
+	text-decoration: underline;
+    text-decoration-color: var(--primary-color);
+    text-decoration-thickness: 1.5px;
 }
