--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -35,7 +35,7 @@ header {
 
 main h2, main h3 {
     font-family: var(--heading-font);
-    font-size: smaller;
+    font-size: medium;
     color: var(--secondary-color);
 }
 
@@ -112,7 +112,7 @@ main p {
 .hero article {
     position: absolute;
     padding: 1rem;
-    margin: 2.5rem;
+    margin: 1.5rem;
     top: 0.25rem;
     left: 0.25rem;
     right: 0.25rem;
@@ -125,14 +125,18 @@ main p {
 } /* End Hero Img */
 
 .boxes img {
-    width: 20rem;
+    width: 15rem;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
     margin-top: 2rem;
 }
 
+.boxes h3 {
+    margin: 0 0 0.25rem 0;
+}
+
 .boxes {
-    width: 20rem;
+    width: 15rem;
     margin: auto;
     text-align: center;
 }
@@ -142,8 +146,19 @@ main p {
     border-top: 1rem;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem ;
-    padding: 1rem;
+    padding: 0.25rem;
     margin-bottom: 2rem;
+}
+
+.button {
+    font-family: var(--heading-font);
+    background-color: var(--accent2-color);
+    color: var(--secondary-color);
+    padding: 0.5rem;
+    text-align: center;
+    cursor: pointer;
+    margin: 0.5rem;
+    border-radius: 0.5rem;
 }
 
 footer {
@@ -156,6 +171,7 @@ footer {
 
 footer p {
     text-align: left;
+    font-size: small;
 }
 
 /* Social Media Links */
