--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,1 +1,44 @@
-@media screen and (min-width: 400px) {}
+@media screen and (min-width: 520px) {
+
+/* Hamburger Menu */
+#menu {
+    top: 3.25rem;
+    /*center button*/
+} /* End Hamburger Menu */
+
+.hero article {
+    top: 2.75rem;
+}
+
+.boxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+}
+
+.boxes article {
+    margin: 0.25rem;
+}
+
+.border {
+    height: 10rem;
+    margin: -.5rem 0 0 0;
+    
+}
+
+#last-box .border {
+    width: 240px;
+    margin: auto;
+    margin-top: -0.5rem;
+}
+
+#last-box {
+    grid-column: 1/3;
+}
+
+footer {
+    margin-top: 2rem;
+}
+
+}
