--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -21,6 +21,7 @@
 
 body {
     margin: 0;
+    min-width: 250px;
 }
 
 header {
@@ -107,6 +108,8 @@ main p {
 
 .hero img {
     width: 100%;
+    height: 20rem;
+    object-fit: cover;
 }
 
 .hero article {
