--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,5 +1,10 @@
 @media screen and (min-width: 800px) {
-    
+
+/* Hero Image */
+.hero article {
+    top: 3.5rem;
+}
+
 .boxes {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
