--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,5 +1,16 @@
 @media screen and (min-width: 800px) {
 
+:root {
+    --primary-color: #637368;
+    --secondary-color: #070D06;
+    --accent1-color: #182612;
+    --accent2-color: #A0A698;
+    --accent3-color: #F1F2E9;
+    
+    --heading-font: 'Oswald', sans-serif;
+    --paragraph-font: 'Quattrocento', serif;
+}
+
 header {
     height: 5rem;
 }
@@ -62,7 +73,7 @@ header {
 .navigation a, .navigation a:visited, .navigation a:hover, .navigation a:focus, .navigation a:active {
     font-family: var(--heading-font);
     font-size: larger;
-    color: var(--primary-color);
+    color: var(--accent2-color)
 } /* End Remove Hamburger */
 
 .social-links img {
