--- a/lesson05/styles/base.css
+++ b/lesson05/styles/base.css
@@ -1,10 +1,10 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -16,17 +16,24 @@ h1 {
 	font-size: 1.5rem;
 }
 
-main {
-	margin: 1rem auto;
-	border: 1px solid rgba(0, 0, 0, 0.1);
-	padding: 1rem;
-	background-color: #ddd;
+.favchap, .reference {
+	margin: 1rem 0;
 	display: flex;
 	flex-direction: column;
+	text-align: center;
+	width: 100%;
 }
 
-input,
-button {
+.reference {
+	background-color: #CDC1D9;
+	padding: 1rem;
+}
+
+input {
+	background-color: #CDC1D9;
+}
+
+input, button {
 	padding: 0.5rem;
 }
 
@@ -58,6 +65,11 @@ li {
 	justify-content: space-between;
 }
 
+footer {
+	margin: 1rem 0;
+	text-align: center;
+}
+
 @media only screen and (min-width: 32.5em) {
 	h1 {
 		font-size: 2rem;
@@ -66,4 +78,11 @@ li {
 	main {
 		width: 320px;
 	}
+
+	body {
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+		grid-template-rows: 1fr auto;
+	}
+
 }
