--- a/hamburgerTest/styles/hamburgerTest.css
+++ b/hamburgerTest/styles/hamburgerTest.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Quattrocento:wght@400;700&display=swap');
+
+:root {
+    --primary-color: #1A2238;
+    --secondary-color: #9DAAF2;
+    --accent1-color: #FF6A3D;
+    --accent2-color: #F4DB7D;
+    --accent3-color: white;
+
+    --heading-font: 'Oswald', sans-serif;
+    --paragraph-font: 'Quattrocento', serif;
+}
+
 /* Remove defult padding and margin. */
 * {
     padding: 0;
@@ -5,9 +18,13 @@
     box-sizing: border-box;
 }
 
+body {
+    min-width: 300px;
+}
+
 /* Header and Hamburger */
 header {
-    background-color: #262626;
+    background-color: var(--primary-color);
 }
 
 li {
@@ -15,8 +32,9 @@ li {
 }
 
 a {
-    color: white;
+    color: var(--accent2-color);
     text-decoration: none;
+    font-family: var(--paragraph-font);
 }
 
 .navbar {
@@ -35,7 +53,10 @@ a {
 }
 
 .nav-branding {
-    font-size: 2rem;
+    margin: 0.5rem;
+    font-family: var(--heading-font);
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .nav-link {
@@ -43,7 +64,7 @@ a {
 }
 
 .nav-link:hover {
-    color: dodgerblue;
+    color: var(--accent1-color);
 }
 
 .hamburger {
@@ -58,10 +79,17 @@ a {
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: white;
+    background-color: var(--accent2-color);
 }
 
-@media (max-width:768px){
+/* wayfinding symbol */
+#active { 
+	text-decoration: underline;
+    text-decoration-color: var(--accent2-color);
+    text-decoration-thickness: 1px;
+}
+
+@media (max-width:750px){
     .hamburger {
         display: block;
     }
@@ -84,7 +112,7 @@ a {
         top: 70px;
         gap: 0;
         flex-direction: column;
-        background-color: #262626;
+        background-color: var(--primary-color);
         width: 100%;
         text-align: center;
         transition: 0.3s;
