--- a/styles/base.css
+++ b/styles/base.css
@@ -45,6 +45,27 @@ header h1 {
     color: var(--accent3-color);
 }
 
+/* Hero Image */
+.hero {
+    position: relative;
+}
+
+.hero img {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+}
+
+.hero #temple-lable {
+    position: absolute;
+    padding: 1rem;
+    margin: 1.5rem;
+    top: 0.25rem;
+    left: 0.25rem;
+    right: 0.25rem;
+    color: var(--primary-color);
+} /* End Hero Img */
+
 main h2, main h3 {
     font-family: var(--heading-font);
     color: var(--primary-color);
