--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -12,14 +12,8 @@
     }
 
 /* Responsive Font */
-body p, body label{
+body p, body label, #temp, #wSpeed, #windchill{
     font-size: revert;
-} 
-
-/* Hamburger Menu */
-#menu {
-    top: 3.25rem;
-    /*center button*/
 } 
 
 /* Hero Image */
