page visit counter

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -58,7 +58,7 @@ main p {
 }
 
 /* Responsive Font */
-body p, body label{
+body p, body label, {
     font-size: smaller;
 } 
 
@@ -153,9 +153,6 @@ body p, body label{
 .weather ul {
     list-style: none;
     padding: 0;
-}
-
-#temp, #wSpeed, #windchill {
     font-family: var(--paragraph-font);
     font-size: smaller;
 }
