--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -57,5 +57,46 @@ body p, body label, #temp, #wSpeed, #windchill{
     visibility: hidden;
 }
 
+/* Discover Page CSS */
+
+/* The Sidebar */
+.sidebar {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 300px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: var(--secondary-color);
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+  } 
+
+#dem, #events, #local, #visits {
+    border: 0.25rem solid var(--accent1-color);
+    border-radius: 1rem;
+    background-color: var(--accent2-color);
+    margin: 0.5rem;
+    padding: 0.5rem;
+}
+
+#dem ul, #events ul, #local ul, #visits ul {
+    list-style-type: none;
+    padding: 0;
+    color: var(--secondary-color);
+    font-family: var(--paragraph-font); 
+}
+
+  /* Main Area */
+#discover  {
+    margin-left: 300px; /* Same as the width of the sidebar */
+    background-color: var(--accent1-color);
+  }
+
+.mArea picture {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
 
 }
