--- a/lesson08/styles/base.css
+++ b/lesson08/styles/base.css
@@ -1,15 +1,14 @@
 
 :root {
-    --primary-color: #c7ecf0;
-    --seconday-color: #292D73;
-    --accent1-color: #4F638c;
-    --accent2-color: #77A1A6;
-    --accent3-color: #D4D9B0;
+    --primary-color: #000000;
+    --seconday-color: #ffffff;
+    --accent1-color: #4b4a4a;
+    --accent2-color: #d3d3d3;
 }
 
 table {
 	margin: 10px auto;
-	border: thin solid var(--seconday-color);
+	border: thin solid var(--accent1-color);
 	box-shadow: 0 0 10px var(--accent1-color);
 	border-collapse: collapse;
 }
@@ -17,31 +16,32 @@ table {
 caption {
   padding: 10px;
   caption-side: bottom;
-	color: var(--seconday-color);
+	color: var(--primary-color);
 	font-size: .85rem;
 }
 
-tr:first-child th{
-	background-color: var(--accent2-color);
+tr:first-child th, #empty{
+	background-color: var(--primary-color);
 	color: var(--seconday-color);
+    border: 1px solid var(--primary-color);
 }
 
 th, td {
 	padding: 7px 15px;
-	border: 1px solid var(--seconday-color);
+	border: 1px solid var(--accent1-color);
 }
 
 th {
-	background-color: var(--accent3-color);
+	background-color: var(--accent1-color);
 	font-size: larger;
     color: var(--seconday-color);
 }
 
 td {
 	text-align: center;
-    color: var(--seconday-color);
+    color: var(--primary-color);
 }
 
-tbody tr:nth-child(odd) {
-	background-color: var(--primary-color);
+tbody tr:nth-child(even) {
+	background-color: var(--accent2-color);
 }
