--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,15 +1,15 @@
 @media screen and (min-width: 1000px) {
 
-:root {
-    --primary-color: #0388A6;
-    --secondary-color: #025e73;
-    --accent1-color: #88b5bf;
-    --accent2-color: #d8d8d8;
-    --accent3-color: #0d0d0d;
+    :root {
+        --primary-color: #0388A6;
+        --secondary-color: #025e73;
+        --accent1-color: #a8d3dd;
+        --accent2-color: #d8d8d8;
+        --accent3-color: #0d0d0d;
     
-    --heading-font: 'Oswald', sans-serif;
-    --paragraph-font: 'Quattrocento', serif;
-}
+        --heading-font: 'Oswald', sans-serif;
+        --paragraph-font: 'Quattrocento', serif;
+    }
 
 header {
     height: 5rem;
