--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,16 +1,16 @@
 @media screen and (min-width: 600px) {
 
-:root {
-    --primary-color: #0388A6;
-    --secondary-color: #025e73;
-    --accent1-color: #88b5bf;
-    --accent2-color: #d8d8d8;
-    --accent3-color: #0d0d0d;
-        
-    --heading-font: 'Oswald', sans-serif;
-    --paragraph-font: 'Quattrocento', serif;
+    :root {
+        --primary-color: #0388A6;
+        --secondary-color: #025e73;
+        --accent1-color: #a8d3dd;
+        --accent2-color: #d8d8d8;
+        --accent3-color: #0d0d0d;
+    
+        --heading-font: 'Oswald', sans-serif;
+        --paragraph-font: 'Quattrocento', serif;
     }
-
+    
 /* Responsive Font */
 body p, body label, #temp, #wSpeed, #windchill{
     font-size: revert;
