--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -253,7 +253,7 @@ footer label {
     background-color: var(--accent1-color);
   }
 
-.mArea h1 {
+.mArea h1, h1 {
     font-family: var(--heading-font);
     color: var(--secondary-color);
     text-align: center;
@@ -374,4 +374,25 @@ textarea {
     max-width: 400px;
     margin: 1rem 2% 2rem 2%;
     box-shadow: 1px 1px 4px #999;
+}
+
+/*Discover*/
+
+
+#cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
+    text-align: center;
+}
+
+#cards div {
+    border: 2px solid var(--secondary-color);
+    background-color: var(--accent2-color);
+    margin: 1rem;
+    padding: 1rem;
+}
+
+#cards div img {
+    max-height: 60px;
+    width: auto;
 }
