--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -28,15 +28,20 @@ header {
     font-family: var(--heading-font);
     color: var(--secondary-color);
     display: flex;
-    align-content: left;
+    align-content: center;
     background-color: var(--accent2-color);
     padding: 0;
+    height: 4rem;
 }
 
 header img {
-    height: 100%;
-    max-width: 4rem;
+    max-width: 3.75rem;
     margin: 0.25rem;
+}
+
+/*Responsive Header*/
+h1 {
+    visibility: hidden;
 }
 
 
@@ -47,7 +52,7 @@ header img {
     right: 1rem;
     font-size: 3rem;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 1.5rem;
     }
 
 main h2, main h3 {
@@ -72,7 +77,7 @@ body p, body label {
 	background: none;
 	position: absolute;
 	top: 1rem;
-	right: 4rem;
+	right: 3rem;
 }
 
 #menu::before {
@@ -256,7 +261,7 @@ footer label {
     background-color: var(--accent1-color);
   }
 
-.mArea h1, h1 {
+.mArea h1 {
     font-family: var(--heading-font);
     color: var(--secondary-color);
     text-align: center;
@@ -377,6 +382,10 @@ textarea {
     max-width: 400px;
     margin: 1rem 2% 2rem 2%;
     box-shadow: 1px 1px 4px #999;
+}
+
+.tpage {
+    margin: 1rem;
 }
 
 /*Discover*/
