--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -24,11 +24,11 @@ h1{
 /* Local Change */
 .local {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .local article {
-    margin: 2rem;
+    margin: 1rem;
     padding: 1rem;
     border: 3px dotted var(--secondary-color);
 }
@@ -107,6 +107,11 @@ h1{
 
 #small, #medium {
     visibility: hidden;
+}
+
+/* Forcast Display */
+#fData {
+    margin: 0.25rem; 
 }
 
 
