--- a/hamburgerTest/styles/base.css
+++ b/hamburgerTest/styles/base.css
@@ -39,3 +39,40 @@ body {
     text-shadow: 2px 2px var(--primary-color);
     font-family: var(--heading-font);
 } /* End Hero Img */
+
+/* Anouncment Bar Test */
+.announcement {
+    background-color: #e70d43;
+    color: #efefef;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    text-align: center;
+    line-height: 1.4;
+    box-shadow: 0 4px 10px rgba(120,120,120,.6);
+}
+
+.announcement_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.2rem 2.8rem;
+    font-weight: 500;
+}
+
+.announcement_btn {
+    position: absolute;
+    right: 2rem;
+    border: none;
+    background: url('../images/iconCancel.svg');
+    height: 1.2rem;
+    width: 1.2rem;
+    background-size: contain;
+    cursor: pointer;
+    transition: all 200ms ease-in-out;
+}
+
+.announcement_btn:hover {
+    transform: scale(1.1);
+}
