--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -5,10 +5,10 @@
     
     How to use ex. color: var(--primary-color);*/
 :root {
-    --primary-color: #0388A6;
-    --secondary-color: #025e73;
-    --accent1-color: #a8d3dd;
-    --accent2-color: #d8d8d8;
+    --primary-color: #7F0008;
+    --secondary-color: #BF000c;
+    --accent1-color: #ededed;
+    --accent2-color: #404040;
     --accent3-color: #0d0d0d;
 
     --heading-font: 'Oswald', sans-serif;
@@ -29,21 +29,16 @@ header {
     color: var(--secondary-color);
     display: flex;
     align-content: center;
-    background-color: var(--accent2-color);
+    background-color: var(--accent1-color);
     padding: 0;
     height: 4rem;
 }
 
 header img {
-    max-width: 3.75rem;
+    max-width: 8rem;
+    height: auto;
     margin: 0.25rem;
 }
-
-/*Responsive Header*/
-h1 {
-    visibility: hidden;
-}
-
 
 /* Light to Dark Switch */
 #mode {
@@ -55,9 +50,13 @@ h1 {
     font-size: 1.5rem;
     }
 
-main h2, main h3 {
+ h1, h2, h3 {
     font-family: var(--heading-font);
-    color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+h1 {
+    font-size: 20px;
 }
 
 main p {
@@ -94,7 +93,7 @@ body p, body label {
     align-self: center;
     display: flex;
 	flex-direction: column;
-	background-color: var(--accent2-color);
+	background-color: var(--accent1-color);
 }
 
 .navigation ul {
@@ -168,11 +167,40 @@ body p, body label {
 .local {
     text-align: center;
     padding: 0;
+    margin: 2rem;
 }
 
 .local article {
     padding: 0.25rem;
 }
+
+.events {
+    padding: 1rem;
+    margin: 3rem 2rem;
+}
+
+.circles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.circles button {
+    border: 1px solid var(--primary-color);
+    border-radius: 100%;
+    height: 10rem;
+    width: 10rem;
+    background-color: var(--primary-color);
+    font-family: var(--paragraph-font);
+    color: var(--accent1-color);
+    margin:2rem;
+    cursor: pointer;
+}
+
+.circles button:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+}
+
 .boxes img {
     width: 15rem;
     border-top-left-radius: 1rem;
@@ -184,7 +212,7 @@ body p, body label {
 
 .boxes {
     width: 15rem;
-    margin: auto;
+    margin: 2rem auto;
     text-align: center;
 }
 
@@ -195,13 +223,13 @@ body p, body label {
     border-bottom-right-radius: 1rem ;
     padding: 0.25rem;
     margin: -.5rem 0 2rem 0;
-    background-color: var(--accent2-color);
+    background-color: var(--accent1-color);
 }
 
 .button {
     font-family: var(--heading-font);
-    background-color: var(--accent1-color);
-    color: var(--accent3-color);
+    background-color: var(--primary-color);
+    color: var(--accent1-color);
     padding: 0.5rem;
     text-align: center;
     cursor: pointer;
@@ -214,9 +242,10 @@ footer {
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 2fr 1fr;
     align-content: center;
-    background-color: var(--accent2-color);
+    background-color: var(--primary-color);
     padding: 0.5rem;
     margin: 0;
+    color: var(--accent1-color);
 }
 
 footer p {
@@ -241,18 +270,18 @@ footer label {
 
 /* Discover Page CSS */
 #dem, #events, #local, #visits {
-    border: 0.25rem solid var(--accent1-color);
+    border: 1px solid var(--accent2-color);
     border-radius: 1rem;
-    background-color: var(--accent2-color);
+    background-color: var(--primary-color);
     margin: 1rem;
     padding: 0.75rem;
+    color: var(--accent1-color);
+    font-family: var(--paragraph-font);
 }
 
 #dem ul, #events ul, #local ul, #visits ul {
     list-style-type: none;
     padding: 0;
-    color: var(--secondary-color);
-    font-family: var(--paragraph-font);
     margin: 0;
 }
 
@@ -293,10 +322,10 @@ picture p {
 }
 
 /* Join Page CSS */
-h2 {
+#jpage h2 {
     margin-left: 1rem;
     font-family: var(--heading-font);
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 #membership div {
@@ -428,6 +457,7 @@ textarea {
 #fData {
     display: flex;
     margin: 0.25rem;
+    flex-direction: column;
     justify-content: space-between;
     margin: 0 2rem;
 }
@@ -443,8 +473,8 @@ textarea {
 
 /* Anouncment Bar */
 .announcement {
-    background-color: #e70d43;
-    color: #efefef;
+    background-color: var(--secondary-color);
+    color: var(--accent1-color);
     position: absolute;
     z-index: 1;
     left: 0;
