--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -174,11 +174,6 @@ body p, body label {
     padding: 0.25rem;
 }
 
-.events {
-    padding: 1rem;
-    margin: 3rem 2rem;
-}
-
 .circles {
     display: flex;
     flex-direction: column;
@@ -505,4 +500,31 @@ textarea {
 
 .announcement_btn:hover {
     transform: scale(1.1);
+}
+
+/* Spotlight */
+.spotlight {
+    align-items: center;
+    margin: 0.5rem;
+    text-align: center;
+}
+
+#spotContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.spotlight div {
+    margin: 1rem;
+    text-align: center;
+    border: 4px solid var(--secondary-color);
+    padding: 0.5rem;
+    background-color: var(--accent2-color);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.8), 0 6px 20px 0 rgba(0, 0, 0, 0.8);
+    width: 270px;
+}
+
+.spotlight div h2, .spotlight div h3, .spotlight div a {
+    color: var(--accent1-color);
 }
