--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -92,4 +92,16 @@ h1 {
     flex-direction: row;
 }
 
+/* spotlight */
+#spotContainer {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 6rem 2rem 6rem;
+}
+
+.spotlight div {
+    width: 350px;
+    height: 240px;
+}
+
 }
