--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -232,6 +232,18 @@ body p, body label {
     border-radius: 0.5rem;
 }
 
+.news {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: #999;
+}
+
+.news form {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 footer {
     display: grid;
     grid-template-columns: 4fr 1fr;
@@ -317,20 +329,20 @@ picture p {
 }
 
 /* Join Page CSS */
-#jpage h2 {
+#jpage h2, .news h2{
     margin-left: 1rem;
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
 
 #membership div {
-    border: 0.25rem solid var(--secondary-color);
+    border: 0.25rem solid var(--primary-color);
     border-radius: 1rem;
     padding: 1rem;
     margin: 1rem;
 }
 
-#membership div h3, #membership div p {
+#membership div h3, #membership div p, .news p {
     margin: 0.25rem 0;
 }
 
@@ -347,7 +359,7 @@ picture p {
     font-family: var(--heading-font);
 }
 
-#register label{
+#register label, .news label {
     display: block;
     padding: 1rem;
     color: var(--accent3-color);
@@ -356,15 +368,17 @@ picture p {
 }
 
 
-#membership p, #membership ul li{
+#membership p, #membership ul li, .news p{
     color: var(--accent3-color);
     font-family: var(--paragraph-font);
 }
 
 #register input[type="text"],
 #register input[type="email"],
-#register input[type="tel"] {
-    background-color: var(--accent2-color);
+#register input[type="tel"], 
+.news input[type="text"],
+.news input[type="email"] {
+    background-color: var(--accent1-color);
     display: block;
     border-radius: 6px;
     padding: .5rem;
@@ -398,10 +412,11 @@ textarea {
     width: 8rem;
 }
 
-#register input[type="submit"] {
+#register input[type="submit"],
+.news input[type="submit"] {
     border: none;
-    background-color: var(--secondary-color);
-    color: var(--accent2-color);
+    background-color: var(--primary-color);
+    color: var(--accent1-color);
     font-family: var(--heading-font);
     border-radius: 6px;
     padding: 1rem;
@@ -409,6 +424,7 @@ textarea {
     max-width: 400px;
     margin: 1rem 2% 2rem 2%;
     box-shadow: 1px 1px 4px #999;
+    cursor: pointer;
 }
 
 .tpage {
@@ -446,6 +462,10 @@ textarea {
     margin: 1rem 0;
     align-items: center;
     justify-content: center;
+}
+
+#weather-icon, #temp, #desc {
+    padding: 0 0.5rem;
 }
 
 /* Forcast Display */
