--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -51,6 +51,18 @@ h1 {
     grid-column: 1/3;
 }
 
+.news {
+    flex-direction: row;
+}
+
+.news div {
+    width: 60%;
+}
+
+.news form {
+    width: 40%
+}
+
 /* Discover Page CSS */
 
 /* The Sidebar */
