--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -29,7 +29,6 @@ header {
     color: var(--secondary-color);
     display: flex;
     align-content: center;
-    background-color: var(--accent1-color);
     padding: 0;
     height: 4rem;
 }
@@ -431,27 +430,49 @@ textarea {
     margin: 1rem;
 }
 
-/*Discover*/
+/*Directory*/
 #directory h1 {
     margin-left: 1rem;
 }
 
-#directory #cards {
+#gridCards{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(320px,1fr));
     text-align: center;
 }
 
-#directory #cards div {
+.gridView {
     border: 2px solid var(--secondary-color);
     background-color: var(--accent1-color);
     margin: 1rem;
     padding: 1rem;
 }
 
-#directory #cards div img {
+.gridView img {
     max-height: 60px;
     width: auto;
+}
+
+.listView {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+    padding: 0.25rem 1rem;
+}
+
+#listCards div:hover {
+   background-color: var(--accent1-color); 
+}
+
+#directory .toggleView {
+    padding: 0.5rem;
+    background-color: var(--accent1-color);
+    padding-left: 60%;
+}
+
+.toggleView button {
+    cursor: pointer;
 }
 
 /* Weather Information */
@@ -550,3 +571,4 @@ textarea {
 .spotlight div h2, .spotlight div h3, .spotlight div a {
     color: var(--primary-color);
 }
+
