--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -116,4 +116,25 @@ h1 {
     height: 240px;
 }
 
+/*Directory*/
+#directory .toggleView {
+    padding: 0.5rem;
+    background-color: var(--accent1-color);
+    padding-left: 85%;
+}
+
+.listView {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.listView p {
+    text-align: right;
+    align-items: center;
+}
+
+.listView h2 {
+    text-align: left;
+}
+
 }
