--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -278,10 +278,10 @@ footer label {
 #dem, #events, #local, #visits {
     border: 1px solid var(--accent2-color);
     border-radius: 1rem;
-    background-color: var(--primary-color);
+    background-color: var(--accent1-color);
     margin: 1rem;
     padding: 0.75rem;
-    color: var(--accent1-color);
+    color: var(--accent2-color);
     font-family: var(--paragraph-font);
 }
 
@@ -301,8 +301,9 @@ footer label {
 
 .mArea h1 {
     font-family: var(--heading-font);
-    color: var(--secondary-color);
-    text-align: center;
+    color: var(--primary-color);
+    text-align: left;
+    margin-left: 1rem;
 }
 
 .mArea picture img {
