--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -73,7 +73,7 @@ h1 {
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 10px;
   } 
